--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "public"]
 	path = public
-	url = git@github.comr:DevRomagna/devromagna.github.io.git
+	url = git@github.com:DevRomagna/devromagna.github.io.git
 	branch = master
